2006-10-12 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/openvrml.cpp
	(plugin_instance::set_window(NPWindow &)): Improved exception
	safety with ScopeGuard.

2006-10-10 Braden McDaniel  <braden@endoframe.com>

	* lib/gtkglext/configure.in: Build against X11 if we are building
	under Cygwin with Cygwin X11.

2006-10-10 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(OPENVRML_GL_CALLBACK_): Don't apply __stdcall__ attribute if
	we're building with Cygwin X11's glu.h.

2006-10-09 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Removed XPIDL, XPIDLFLAGS precious variables.

2006-10-08 Braden McDaniel  <braden@endoframe.com>

	Use the npruntime extensions to NPAPI to make the plug-in
	scriptable instead of XPCOM.

	* mozilla-plugin/configure.ac: Removed XPCOM-related checks.
	* mozilla-plugin/src/Makefile.am: Removed references to
	openvrml.idl and files generated from it.
	* mozilla-plugin/src/openvrml.cpp
	(script_callback_map): A singleton to map NPIdentifiers to
	functions.
	(plugin_instance::scriptablePeer): Removed member.
	(plugin_instance::npobj): Added member; the NPObject associated
	with the plug-in instance.
	(plugin_instance::get_name(const NPVariant *, uint32_t,
	NPVariant*)): Browser.getName() implementation.
	(plugin_instance::get_version(const NPVariant *, uint32_t,
	NPVariant*)): Browser.getVersion() implementation.
	(ScriptablePeer): Removed class.
	(NP_Initialize(NPNetscapeFuncs *, NPPluginFuncs *)): Initialize
	mozillaFuncs with the npruntime API function pointers.  Removed
	initialization of the console_service pointer to the Mozilla XPCOM
	console service.
	(NPP_GetValue(NPP, NPPVariable, void *)): Removed support for
	NPPVpluginScriptableInstance and NPPVpluginScriptableIID.  Added
	support for NPPVpluginScriptableNPObject.
	(printerr(const char *)): Write to stderr rather than the
	JavaScript console.
	(NPN_ReleaseVariantValue(NPVariant *)): Added npruntime function.